[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myna"
version = "0.1.0"
description = "Myna — MCP service backend (FastAPI + official MCP SDK)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
myna = "myna.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.ruff.lint.extend-per-file-ignores]
# FastAPI's `Depends(...)` / `Header(...)` are idiomatic in defaults.
"src/myna/api/*.py" = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["myna"]
